Update: Styling—fix submission border, feedback button z-index, success message border.

--- a/app/assets/stylesheets/design/_tender.scss
+++ b/app/assets/stylesheets/design/_tender.scss
@@ -23,10 +23,13 @@
   position: fixed;
   bottom: 12px;
   right: 12px;
+  z-index: 9999;
+
   a {
     background-color: #3f5b75 !important;
     border-radius: 999rem;
     color: white;
+    font-size: 1rem;
     font-weight: bold;
   }
 
